# bookmark_launcher

./: .gitignore  Cargo.toml  LICENSE  README.md  bookmarks.json
bookmark_launcher/: Cargo.toml
bookmark_launcher/src/: app.rs  main.rs
bookmark_launcher/src/ui/: backend_tui.rs
docs/: coding_guideline.md  migemo_ja.md
migemo-complete/: Cargo.toml
migemo-complete/shell/: _cd  _migemo_files  cd-completion.ps1  cd.fish
migemo-complete/src/: lib.rs  main.rs
migemo-core/: Cargo.toml
migemo-core/examples/: bench_dict_load.rs
migemo-core/src/: dictionary.rs  lib.rs  romaji.rs  searcher.rs
src/: app.rs  main.rs  ui.rs
src/migemo/: dictionary.rs  searcher.rs
src/ui/: backend.rs  backend_eframe.rs  backend_fltk.rs  backend_tui.rs  backend_windows.rs  backend_windows_rs.rs
