[package]
name = "bookmark_launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "5.0"
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.19"
fuzzy-matcher = "0.3"
directories = "4.0"
[features]
# default uses the TUI backend
default = ["backend-tui"]
backend-eframe = ["eframe"]
backend-tui = ["ratatui", "crossterm"]

[dependencies.ratatui]
version = "0.24"
optional = true

[dependencies.crossterm]
version = "0.27"
optional = true
