[package]
name = "bookmark_launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
open = "5.0"
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.19"
fuzzy-matcher = "0.3"
directories = "4.0"
regex = "1"
rustmigemo = { git = "https://github.com/oguna/rustmigemo", branch = "master" }
ratatui = "0.24"
crossterm = "0.27"
